--- a/unbound.conf
+++ b/unbound.conf
@@ -198,7 +198,7 @@ server:
 	# access-control: ::0/0 refuse
 	# access-control: ::1 allow
 	# access-control: ::ffff:127.0.0.1 allow
-	access_control: 127.0.0.0/8 allow
+	access-control: 127.0.0.0/8 allow
 	access-control: 172.17.0.0/16 allow
 	access-control: 192.168.1.0/24 allow
 
@@ -243,7 +243,7 @@ server:
 
 	# Log to syslog(3) if yes. The log facility LOG_DAEMON is used to
 	# log to, with identity "unbound". If yes, it overrides the logfile.
-	# use-syslog: yes
+	use-syslog: no
 
 	# print UTC timestamp in ascii to logfile, default is epoch in seconds.
 	# log-time-ascii: no
